include/vsmc/vsmc.f90


    interface
        function vsmc_mkl_brng_xorwow1x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorwow1x64
        end function vsmc_mkl_brng_xorwow1x64
    end interface

    interface
        function vsmc_mkl_brng_xorwow2x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorwow2x64
        end function vsmc_mkl_brng_xorwow2x64
    end interface

    interface
        function vsmc_mkl_brng_xorwow4x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorwow4x64
        end function vsmc_mkl_brng_xorwow4x64
    end interface

    interface
        function vsmc_mkl_brng_xorwow8x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorwow8x64
        end function vsmc_mkl_brng_xorwow8x64
    end interface

    interface
        function vsmc_mkl_brng_xorwow16x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorwow16x64
        end function vsmc_mkl_brng_xorwow16x64
    end interface

    interface
        function vsmc_mkl_brng_xorwow32x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorwow32x64
        end function vsmc_mkl_brng_xorwow32x64
    end interface

    interface
        function vsmc_mkl_brng_xorwow64x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_xorwow64x64
        end function vsmc_mkl_brng_xorwow64x64
    end interface

    interface
        function vsmc_mkl_brng_philox2x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_philox2x32
        end function vsmc_mkl_brng_philox2x32
    end interface

    interface
        function vsmc_mkl_brng_philox4x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_philox4x32
        end function vsmc_mkl_brng_philox4x32
    end interface

    interface
        function vsmc_mkl_brng_philox2x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_philox2x64
        end function vsmc_mkl_brng_philox2x64
    end interface

    interface
        function vsmc_mkl_brng_philox4x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_philox4x64
        end function vsmc_mkl_brng_philox4x64
    end interface

    interface
        function vsmc_mkl_brng_threefry2x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_threefry2x32
        end function vsmc_mkl_brng_threefry2x32
    end interface

    interface
        function vsmc_mkl_brng_threefry4x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_threefry4x32
        end function vsmc_mkl_brng_threefry4x32
    end interface

    interface
        function vsmc_mkl_brng_threefry2x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_threefry2x64
        end function vsmc_mkl_brng_threefry2x64
    end interface

    interface
        function vsmc_mkl_brng_threefry4x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_threefry4x64
        end function vsmc_mkl_brng_threefry4x64
    end interface

    interface
        function vsmc_mkl_brng_threefry2x32avx2() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_threefry2x32avx2
        end function vsmc_mkl_brng_threefry2x32avx2
    end interface

    interface
        function vsmc_mkl_brng_threefry4x32avx2() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_threefry4x32avx2
        end function vsmc_mkl_brng_threefry4x32avx2
    end interface

    interface
        function vsmc_mkl_brng_threefry2x64avx2() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_threefry2x64avx2
        end function vsmc_mkl_brng_threefry2x64avx2
    end interface

    interface
        function vsmc_mkl_brng_threefry4x64avx2() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_threefry4x64avx2
        end function vsmc_mkl_brng_threefry4x64avx2
    end interface

    interface
        function vsmc_mkl_brng_threefry2x32sse2() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_threefry2x32sse2
        end function vsmc_mkl_brng_threefry2x32sse2
    end interface

    interface
        function vsmc_mkl_brng_threefry4x32sse2() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_threefry4x32sse2
        end function vsmc_mkl_brng_threefry4x32sse2
    end interface

    interface
        function vsmc_mkl_brng_threefry2x64sse2() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_threefry2x64sse2
        end function vsmc_mkl_brng_threefry2x64sse2
    end interface

    interface
        function vsmc_mkl_brng_threefry4x64sse2() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_threefry4x64sse2
        end function vsmc_mkl_brng_threefry4x64sse2
    end interface

    interface
        function vsmc_mkl_brng_aes128_1x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes128_1x32
        end function vsmc_mkl_brng_aes128_1x32
    end interface

    interface
        function vsmc_mkl_brng_aes128_2x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes128_2x32
        end function vsmc_mkl_brng_aes128_2x32
    end interface

    interface
        function vsmc_mkl_brng_aes128_4x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes128_4x32
        end function vsmc_mkl_brng_aes128_4x32
    end interface

    interface
        function vsmc_mkl_brng_aes128_8x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes128_8x32
        end function vsmc_mkl_brng_aes128_8x32
    end interface

    interface
        function vsmc_mkl_brng_aes128_1x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes128_1x64
        end function vsmc_mkl_brng_aes128_1x64
    end interface

    interface
        function vsmc_mkl_brng_aes128_2x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes128_2x64
        end function vsmc_mkl_brng_aes128_2x64
    end interface

    interface
        function vsmc_mkl_brng_aes128_4x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes128_4x64
        end function vsmc_mkl_brng_aes128_4x64
    end interface

    interface
        function vsmc_mkl_brng_aes128_8x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes128_8x64
        end function vsmc_mkl_brng_aes128_8x64
    end interface

    interface
        function vsmc_mkl_brng_aes192_1x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes192_1x32
        end function vsmc_mkl_brng_aes192_1x32
    end interface

    interface
        function vsmc_mkl_brng_aes192_2x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes192_2x32
        end function vsmc_mkl_brng_aes192_2x32
    end interface

    interface
        function vsmc_mkl_brng_aes192_4x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes192_4x32
        end function vsmc_mkl_brng_aes192_4x32
    end interface

    interface
        function vsmc_mkl_brng_aes192_8x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes192_8x32
        end function vsmc_mkl_brng_aes192_8x32
    end interface

    interface
        function vsmc_mkl_brng_aes192_1x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes192_1x64
        end function vsmc_mkl_brng_aes192_1x64
    end interface

    interface
        function vsmc_mkl_brng_aes192_2x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes192_2x64
        end function vsmc_mkl_brng_aes192_2x64
    end interface

    interface
        function vsmc_mkl_brng_aes192_4x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes192_4x64
        end function vsmc_mkl_brng_aes192_4x64
    end interface

    interface
        function vsmc_mkl_brng_aes192_8x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes192_8x64
        end function vsmc_mkl_brng_aes192_8x64
    end interface

    interface
        function vsmc_mkl_brng_aes256_1x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes256_1x32
        end function vsmc_mkl_brng_aes256_1x32
    end interface

    interface
        function vsmc_mkl_brng_aes256_2x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes256_2x32
        end function vsmc_mkl_brng_aes256_2x32
    end interface

    interface
        function vsmc_mkl_brng_aes256_4x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes256_4x32
        end function vsmc_mkl_brng_aes256_4x32
    end interface

    interface
        function vsmc_mkl_brng_aes256_8x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes256_8x32
        end function vsmc_mkl_brng_aes256_8x32
    end interface

    interface
        function vsmc_mkl_brng_aes256_1x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes256_1x64
        end function vsmc_mkl_brng_aes256_1x64
    end interface

    interface
        function vsmc_mkl_brng_aes256_2x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes256_2x64
        end function vsmc_mkl_brng_aes256_2x64
    end interface

    interface
        function vsmc_mkl_brng_aes256_4x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes256_4x64
        end function vsmc_mkl_brng_aes256_4x64
    end interface

    interface
        function vsmc_mkl_brng_aes256_8x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_aes256_8x64
        end function vsmc_mkl_brng_aes256_8x64
    end interface

    interface
        function vsmc_mkl_brng_ars_1x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_ars_1x32
        end function vsmc_mkl_brng_ars_1x32
    end interface

    interface
        function vsmc_mkl_brng_ars_2x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_ars_2x32
        end function vsmc_mkl_brng_ars_2x32
    end interface
